# RealEstate-Project

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PRD.md  README.md  commend.md  docker-compose.yml  implementation_plan.md  main.py  manage.py  nginx.conf  pyproject.toml  requirements.txt  t.json
.agent/rules/: backend-context-analysis.md  frontend-ui-ai-agent.md
.github/workflows/: ci.yml  deploy.yml
ai_service/: Dockerfile  main.py  requirements.txt  test_main.py
apps/: admin.py  models.py  urls.py
apps/address/: urls.py  views.py
apps/authentication/: serializers.py  views.py
apps/categorie/: serializers.py  urls.py  views.py
apps/favorite/: serializers.py  urls.py  views.py
apps/notifications/: consumers.py  tasks.py
apps/property/: serializers.py  urls.py  views.py
apps/review/: urls.py  views.py
apps/ticket/: urls.py  views.py
apps/users/: serializers.py  views.py
backend/: __init__.py  docker-compose.yml
backend/services/: __init__.py
backend/workers/: Dockerfile  celery_app.py  requirements.txt
core/: Dockerfile  asgi.py  data.json  db1.sqlite3  entrypoint.sh  manage.py  pytest.ini  real-estate-app-ee644-firebase-adminsdk-nc9u9-9a54a7b302.json  requirements.txt  schema.yml  settings.py  test.txt  urls.py  wsgi.py
core/ML/: model.joblib
docs/: RealEstate_PRD_v2.docx  RealEstate_PRD_v2.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.js
postgres-init/: init.sql
realtime/: Dockerfile  main.py  requirements.txt  test_main.py
(+180 files in other folders)
