[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=23.2.0",
    "aiohttp>=3.9.0",
    "anthropic>=0.18.0",
    "celery>=5.3.0",
    "fastapi>=0.104.0",
    "google-generativeai>=0.3.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "openai>=1.3.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "shared>=0.0.32",
    "sqlalchemy>=2.0.0",
    "tiktoken>=0.5.0",
    "uvicorn[standard]>=0.24.0",
]
